src/objects/GFCUser__c.object
<CustomObject>
    <fields>
        <fullName>APIKey__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCAuthToken__c</fullName>
        <label>FCAuthToken</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionKey__c</fullName>
        <label>Session Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sig__c</fullName>
        <label>Sig</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>UserType</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GFC_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UsingNewPassword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using New Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>displayName__c</fullName>
        <label>displayName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thumbnailUrl__c</fullName>
        <label>thumbnailUrl</label>
        <type>TextArea</type>
    </fields>
    <label>GFCUser</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>thumbnailUrl__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GFCUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GFC Users</pluralLabel>
    <recordTypes>
        <fullName>Facebook</fullName>
        <active>true</active>
        <label>Facebook</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>